--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -375,11 +375,20 @@
     }
 }    
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 470px) {
     .menuItems {
         color: #edeec9;
         margin-left: 20px;
         padding-bottom:1px;
         font-size: 18px;
     }
-}    
+}   
+
+@media screen and (max-width: 320px) {
+    .menuItems {
+        color: #edeec9;
+        margin-left: 20px;
+        padding-bottom:1px;
+        font-size: 13px;
+    }
+}
