--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -367,3 +367,25 @@ a {
             animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   }
 }  
+
+@media screen and (min-width: 375px) {
+   .acornHeading {
+     height: 80px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -450px;
+    -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+  }
+
+  .heroHeading {
+    margin-top: 260px;
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Lexend Peta', sans-serif;
+    color: white;
+    -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+          animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
+}  
