--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -375,14 +375,23 @@
     }
 }    
 
-@media screen and (max-width: 470px) {
+@media screen and (min-width: 470px) {
     .menuItems {
         color: #edeec9;
         margin-left: 20px;
         padding-bottom:1px;
         font-size: 18px;
     }
-}   
+}
+
+@media screen and (min-width: 375px) {
+    .menuItems {
+        color: #edeec9;
+        margin-left: 20px;
+        padding-bottom:1px;
+        font-size: 16px;
+    }
+} 
 
 @media screen and (max-width: 320px) {
     .menuItems {
