--- a/src/sass/_seasonal.scss
+++ b/src/sass/_seasonal.scss
@@ -77,5 +77,41 @@
 }   
 
 @media screen and (max-width: 470px) {
+    .seasonal {
+        margin-top: 700px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        height: 1700px;
+    }
+}    
 
+@media screen and (max-width: 375px) {
+    .seasonal {
+        margin-top: 700px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        height: 1900px;
+    }
+}    
+
+@media screen and (max-width: 320px) {
+    .seasonal {
+        margin-top: 700px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        height: 1700px;
+    }
+
+    .seasonalHeading {
+        margin-top: 200px;
+        text-align: center;
+        border-bottom: 1px solid black;
+        height: 50px;
+        width:300px;
+        font-family: 'Lexend Zetta', sans-serif;
+        grid-column-start: 3;
+        justify-content:center;
+        font-size: 20px;
+        margin-bottom: -270px;
+    }
 }    
