--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -80,95 +80,7 @@
     grid-row-start: 1;
     margin-right: -100px;
     z-index: 10;
-}  
-
-// @media screen and (min-width: 570px) {
-//     .process {
-//         background-color:#30332e;
-//         display: grid;
-//         grid-template-columns: 1fr 1fr repeat(6, 1fr) 1fr;
-//         grid-template-rows: 1fr 1fr 1fr 1fr;
-//         height: 980px;
-//     }
-    
-//     .processDiv {
-//         width: 400px;
-//         margin-top: 30px;
-//         text-align: center;
-//         padding: 10px;
-//         grid-column-start: 2;
-//         justify-content: center;
-//         margin-left: 80px;
-//     }
-    
-//     .processHeading {
-//         font-family: 'Lexend Zetta', sans-serif;
-//         padding-bottom: 10px;
-//         font-size: 28px;
-//         color: #edeec9;
-//         border-bottom: 1px solid white;
-//     }
-    
-//     .summary {
-//         color: #edeec9;
-//         padding-top: 10px;
-//         grid-column-start: 2;
-//         grid-column-end: 4;
-//         text-align: center;
-//         font-size: 18px;
-//     }
-    
-//     .button {
-//         background-color: #30332e;
-//         color: white;
-//         border: 1px solid white;
-//         padding: 15px 32px;
-//         text-align: center;
-//         display: inline-block;
-//         font-size: 16px;
-//         margin: 4px 2px;
-//         cursor: pointer;
-//         grid-column-start: 3;
-//         margin-top: 50px;
-//         width:40vw;
-//         height:60px;
-//         font-family: 'Lexend Zetta', sans-serif;
-//         padding-bottom: 5px;
-//         grid-column-start: 2;
-//         grid-column-end: 4;
-//     }
-    
-//     .greyBox {
-//         height: 260px;
-//         width: 460px;
-//         background-color: #7A8693;
-//         grid-row-start: 2;
-//         margin-top: 70px;
-//         margin-left: -450px;
-//         z-index: 1;
-//     }
-    
-//     .dish {
-//         height: 200px;
-//         width: 300px;
-//         margin-top: 30px;
-//         grid-column-start:3;
-//         grid-row-start: 2;
-//         margin-left: -480px;
-//         z-index: 5;
-//     }
-    
-//     .chef {
-//         height: 150px;
-//         width: 350px;
-//         margin-top: 45px;
-//         margin-left: -300px;
-//         grid-column-start: 3;
-//         grid-row-start: 2;
-//         margin-right: -100px;
-//         z-index: 10;
-//     }  
-// }    
+}    
 
 
 @media screen and (min-width: 470px) {
@@ -209,7 +121,7 @@
         cursor: pointer;
         grid-column-start: 3;
         margin-top: 50px;
-        width:30vw;
+        width:70vw;
         height:60px;
         font-family: 'Lexend Zetta', sans-serif;
         padding-bottom: 5px;
@@ -223,7 +135,7 @@
         grid-row-start: 2;
         width: 200px;
         margin-top: 70px;
-        margin-left: 30px;
+        margin-left: -60px;
         z-index: 1;
     }
     
@@ -234,7 +146,7 @@
         grid-column-start:5;
         grid-column-start:6;
         grid-row-start: 2;
-        margin-left: -290px;
+        margin-left: -190px;
         z-index: 5;
     }
     
@@ -242,7 +154,7 @@
         height: 150px;
         width: 300px;
         margin-top: 170px;
-        margin-left: -280px;
+        margin-left: -180px;
         grid-column-start: 5;
         grid-column-start: 6;
         grid-row-start: 2;
@@ -258,7 +170,7 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
     .process {
         width: auto;
         background-color:#30332e;
