--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -163,7 +163,7 @@ a {
 @media (min-width: 300px) and (max-width: 320px){
   .header {
     width: 100%;
-    height: 100vh;
+    height: 800px;
     background-image: url("background.jpg");
     background-size: center;
     background-repeat: no-repeat;
@@ -198,16 +198,18 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -690px;
+    margin-top: -490px;
     -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   }
   
   .heading5280 {
     color: white;
+    font-size: 16px;
     font-family: 'Hepta Slab', serif;
     text-align: center;
     margin-top: 40px;
+    width: 280px;
     -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   }
@@ -224,6 +226,7 @@ a {
     color: white;
     font-family: 'Hepta Slab', serif;
     text-align: center;
+    font-size: 16px;
     margin-top: 40px;
     -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
@@ -242,7 +245,7 @@ a {
   .heroHeading {
       margin-top: 260px;
       text-align: center;
-      font-size: 30px;
+      font-size: 20px;
       font-family: 'Lexend Peta', sans-serif;
       color: white;
       -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
@@ -253,7 +256,7 @@ a {
 @media (min-width: 321px) and (max-width: 375px){
   .header {
     width: 100%;
-    height: 100vh;
+    height: 720px;
     background-image: url("background.jpg");
     background-size: center;
     background-repeat: no-repeat;
