--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -89,7 +89,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr repeat(6, 1fr) 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr;
-        height: 580px;
+        height: 950px;
     }
     
     
@@ -153,21 +153,197 @@
     }
     
     .dish {
-        height: 400px;
-        width: 500px;
+        height: 200px;
+        width: 205px;
         margin-top: 30px;
-        grid-column-start:9;
-        grid-row-start: 1;
+        margin-left: -200px;
+        grid-row-start: 2;
         z-index: 5;
     }
     
     .chef {
-        height: 350px;
-        width: 550px;
-        margin-top: 45px;
+        height: 200px;
+        width: 250px;
+        margin-top: 165px;
         grid-column-start: 8;
+        grid-row-start: 2;
+        margin-left: -250px;
+        z-index: 10;
+    }    
+}
+
+@media (min-width: 321px) and (max-width: 375px){
+    .process {
+        background-color:#30332e;
+        display: grid;
+        grid-template-columns: 1fr 1fr repeat(6, 1fr) 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        height: 980px;
+    }
+    
+    
+    #processCard {
+        width: 300px;
+        margin-top: 30px;
+        text-align: center;
+        padding: 10px;
+        grid-column-start: 3;
+    }
+    
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 10px;
+        text-align: center;
+        font-size: 28px;
+        color: #edeec9;
+        border-bottom: 1px solid white;
+    }
+    
+    .summary {
+        color: #edeec9;
+        padding-top: 10px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        text-align: center;
+        font-size: 18px;
+    }
+    
+    .button {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: 50px;
+        width: 260px;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 5px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+    }
+    
+    .greyBox {
+        height: 460px;
+        background-color: #7A8693;
+        grid-column-start: 5;
+        grid-column-end: 10;
+        grid-row-start: 2;
+        margin-top: 70px;
+        z-index: 1;
+    }
+    
+    .dish {
+        height: 150px;
+        width: 155px;
+        grid-row-start: 2;
+        z-index: 5;
+        display:none;
+    }
+    
+    .chef {
+        height: 150px;
+        width: 150px;
+        margin-top: 165px;
+        grid-row-start: 2;
+        z-index: 10;
+        margin-left: -700px;
+        display:none;
+    }    
+}
+
+@media (min-width: 376px) and (max-width: 470px){
+    .process {
+        background-color:#30332e;
+        display: grid;
+        grid-template-columns: 1fr 1fr repeat(6, 1fr) 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        height: 780px;
+    }
+    
+    
+    #processCard {
+        width: 410px;
+        margin-top: 30px;
+        text-align: center;
+        padding: 10px;
+        justify-content: center;
+        grid-column-start: 3
+    }
+    
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 10px;
+        text-align: center;
+        font-size: 28px;
+        color: #edeec9;
+        border-bottom: 1px solid white;
+        margin-left: 20px;
+    }
+    
+    .summary {
+        color: #edeec9;
+        padding-top: 10px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        text-align: center;
+        font-size: 18px;
+        margin-left: 20px;
+    }
+    
+    .button {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: 50px;
+        width: 260px;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 5px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-left: 20px;
+    }
+    
+    .greyBox {
+        height: 460px;
+        background-color: #7A8693;
+        grid-column-start: 5;
+        grid-column-end: 10;
         grid-row-start: 1;
-        margin-right: -100px;
+        margin-top: 70px;
+        z-index: 1;
+    }
+    
+    .dish {
+        height: 200px;
+        width: 300px;
+        margin-top: 30px;
+        grid-column-start:9;
+        grid-row-start: 2;
+        z-index: 5;
+        margin-left: -330px;
+    }
+    
+    .chef {
+        height: 150px;
+        width: 350px;
+        margin-top: 145px;
+        grid-column-start: 8;
+        grid-row-start: 2;
+        margin-left: -400px;
         z-index: 10;
     }    
 }
@@ -187,8 +363,8 @@
         margin-top: 30px;
         text-align: center;
         padding: 10px;
-        justify-content: center;
-        grid-column-start: 3
+        grid-column-start: 3;
+        margin-left: 23px;
     }
     
     .processHeading {
@@ -244,7 +420,7 @@
         width: 500px;
         margin-top: 30px;
         grid-column-start:9;
-        grid-row-start: 1;
+        grid-row-start: 2;
         z-index: 5;
     }
     
@@ -253,8 +429,8 @@
         width: 550px;
         margin-top: 45px;
         grid-column-start: 8;
-        grid-row-start: 1;
+        grid-row-start: 2;
         margin-right: -100px;
         z-index: 10;
-    }  
-}       
+    } 
+}    
