--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -83,9 +83,7 @@
     z-index: 10;
 }    
 
-
-
-@media (min-width: 376px) and (max-width: 470px){
+@media (min-width: 471px) and (max-width: 568px){
     .process {
         background-color:#30332e;
         display: grid;
@@ -173,6 +171,97 @@
         margin-left: -400px;
         z-index: 10;
         display:none;
+    } 
+}    
+
+
+@media (min-width: 376px) and (max-width: 470px){
+    .process {
+        background-color:#30332e;
+        display: grid;
+        grid-template-columns: 1fr 1fr repeat(6, 1fr) 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        height: 680px;
+    }
+    
+    
+    #processCard {
+        width: 410px;
+        margin-top: 30px;
+        text-align: center;
+        padding: 10px;
+        justify-content: center;
+    }
+    
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 10px;
+        text-align: center;
+        font-size: 28px;
+        color: #edeec9;
+        border-bottom: 1px solid white;
+        margin-left:10px;
+    }
+    
+    .summary {
+        color: #edeec9;
+        padding-top: 10px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        text-align: center;
+        font-size: 18px;
+        margin-left:10px;
+    }
+    
+    .button {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: 50px;
+        width: 260px;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 5px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-left: 20px;
+    }
+    
+    .greyBox {
+        height: 460px;
+        background-color: #7A8693;
+        grid-column-start: 5;
+        grid-column-end: 10;
+        grid-row-start: 1;
+        margin-top: 70px;
+        z-index: 1;
+    }
+    
+    .dish {
+        height: 200px;
+        width: 300px;
+        margin-top: 30px;
+        grid-column-start:9;
+        grid-row-start: 2;
+        z-index: 5;
+        margin-left: -330px;
+    }
+    
+    .chef {
+        height: 150px;
+        width: 350px;
+        margin-top: 145px;
+        grid-column-start: 8;
+        grid-row-start: 2;
+        margin-left: -400px;
+        z-index: 10;
     }    
 }
 
