--- a/src/components/Gsaphero/_gsaphero.scss
+++ b/src/components/Gsaphero/_gsaphero.scss
@@ -3,6 +3,7 @@
      background-size: cover;
      background-repeat: no-repeat;
      width:100%;
+     height: 900px;
  }
 
  .gsapHeading {
@@ -34,13 +35,3 @@
     }
  }  
  
- @media screen and (max-width: 470px) {
-    .gsapHeading {
-        font-size: 25px;
-        text-align: center;
-        margin-top: 410px;
-        color: white;
-        font-family: 'Lexend Zetta', sans-serif;
-        z-index: 10;
-    }
- }   
