--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,24 +1,32 @@
 .footer {
     background-color: #525962;
-    height: 60px;
+    height: 90px;
 }
 
 .footerMessage {
     text-align: center;
     color: white;
     font-family: 'Lexend Peta', sans-serif;
+    margin-top: 20px;
+}
+
+.socialFooter {
+    margin-top:10px;
+    text-align: center;
 }
 
 .social {
     margin-right: 20px;
     font-size: 25px;
     color: #3b5998;
+    width: 20px;
 }
 
 .social2 {
-    margin-right: 20px;
+    margin-left: 20px;
     font-size: 25px;
     color: #1da1f2;
+    width: 20px;
 }
 
 @media screen and (max-width: 770px) {
