--- a/src/sass/_seasonal.scss
+++ b/src/sass/_seasonal.scss
@@ -20,41 +20,25 @@
     grid-column-end: 5;
 }
 
-@media screen and (max-width: 840px) {
+@media (min-width: 551px) and (max-width: 1000px){
     .seasonal {
+        margin-top: 900px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        height: 1100px;
-        margin-top: 890px;
+        height: 1200px;
     }
 }    
 
-@media screen and (max-width: 770px) {
+@media (min-width: 415px) and (max-width: 550px){
     .seasonal {
-        margin-top: 1000px;
+        margin-top: 900px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        height: 1100px;
+        height: 1200px;
     }
-    
-    .seasonalHeading {
-        text-align: center;
-        margin-top:-130px;
-        border-bottom: 1px solid black;
-        height: 50px;
-        width:500px;
-        font-family: 'Lexend Zetta', sans-serif;
-        grid-column-start: 3;
-        justify-content:center;
-    }
-    
-    .dishItems {
-        grid-column-start: 1;
-        grid-column-end: 5;
-    }
-}  
+}    
 
-@media screen and (max-width: 570px) {
+@media (min-width: 321px) and (max-width: 414px){
     .seasonal {
         margin-top: 700px;
         display: grid;
@@ -63,7 +47,7 @@
     }
     
     .seasonalHeading {
-        margin-top: 200px;
+        margin-top: 300px;
         text-align: center;
         border-bottom: 1px solid black;
         height: 50px;
@@ -73,24 +57,6 @@
         justify-content:center;
         font-size: 20px;
         margin-bottom: -270px;
-    }
-}   
-
-@media screen and (max-width: 470px) {
-    .seasonal {
-        margin-top: 700px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        height: 1700px;
-    }
-}    
-
-@media screen and (max-width: 375px) {
-    .seasonal {
-        margin-top: 700px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        height: 1900px;
     }
 }    
 
